test/tests/operators/from_microsoft_graph/error_resource_version.txt
error: resource path must not include a Graph API version
 --> tests/operators/from_microsoft_graph/error_resource_version.tql:9:22
  |
9 | from_microsoft_graph "v1.0/users",
  |                      ^^^^^^^^^^^^ 
  |
  = hint: use `version="v1.0"` or `version="beta"` instead
